create folder endpoint should accept list of folders
Close #275
Close #276 - created date on folder should be rendered as date-time string, not milliseconds-from-epoch

Added some more api usage examples.